--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -18,6 +18,17 @@
                 android:minHeight="200dp"
                 android:scaleType="centerCrop"
                 />
+            <ToggleButton
+                android:id="@+id/detail_tog_fav"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                style="@style/toggleButton"
+                android:background="@drawable/ic_toggle_bg"
+                android:layout_alignBottom="@id/detail_img_backdrop"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="-20dp"
+                android:layout_marginRight="15dp"
+                />
             <TextView
                 android:id="@+id/detail_txt_tagline"
                 android:layout_width="wrap_content"
@@ -221,53 +232,69 @@
                 style="@style/Base.TextAppearance.AppCompat.Medium"
                 android:paddingBottom="30dp"
                 />
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp" />
-            <TextView
-                android:id="@+id/detail_txt_trailers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Trailers"
-                style="@style/Base.TextAppearance.AppCompat.Large"
-                />
-            <HorizontalScrollView
-                android:id="@+id/detail_hsv_trailers"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="75dp"
-                >
-                <LinearLayout
-                    android:id="@+id/detail_lin_trailers"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
-
-                </LinearLayout>
-            </HorizontalScrollView>
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp" />
-            <TextView
-                android:id="@+id/detail_txt_refiews"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Reviews"
-                style="@style/Base.TextAppearance.AppCompat.Large"
-                />
             <LinearLayout
-                android:id="@+id/detail_lin_reviews"
+                android:id="@+id/detail_master_lin_trail"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:gravity="center"
                 >
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp" />
+
+                <TextView
+                    android:id="@+id/detail_txt_trailers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Trailers"
+                    style="@style/Base.TextAppearance.AppCompat.Large"
+                    />
+                <HorizontalScrollView
+                    android:id="@+id/detail_hsv_trailers"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="75dp"
+                    >
+                    <LinearLayout
+                        android:id="@+id/detail_lin_trailers"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/detail_master_lin_rev"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                >
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="10dp" />
+                <TextView
+                    android:id="@+id/detail_txt_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Reviews"
+                    style="@style/Base.TextAppearance.AppCompat.Large"
+                    />
+                <LinearLayout
+                    android:id="@+id/detail_lin_reviews"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
